--- a/app/src/main/res/layout/activity_configuracion_unica.xml
+++ b/app/src/main/res/layout/activity_configuracion_unica.xml
@@ -1,11 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="arenzo.alejandroochoa.ccure.Fragments.configuracion"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:context="arenzo.alejandroochoa.ccure.Activities.configuracionUnica">
 
     <TextView
         android:id="@+id/textView3"
@@ -138,7 +137,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <Button
-        android:id="@+id/btnGuardarConfiguracion"
+        android:id="@+id/btnGuardarConfiguracionUnico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -153,4 +152,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spPuertasUnico" />
+
 </android.support.constraint.ConstraintLayout>
