--- a/app/src/main/res/layout/nav_header_menu_principal.xml
+++ b/app/src/main/res/layout/nav_header_menu_principal.xml
@@ -12,15 +12,15 @@
     android:weightSum="1">
 
     <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/perfil"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_account_circle"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
-        android:id="@+id/perfil"
         app:civ_shadow="true"
-        app:civ_shadow_radius="10"
-        app:civ_shadow_color="@color/primary"/>
+        app:civ_shadow_color="@color/primary"
+        app:civ_shadow_radius="10" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
