--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -25,53 +25,56 @@
 
     <com.kyleduo.switchbutton.SwitchButton
         android:id="@+id/sbTipoChecada"
+        style="@style/AppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
-        android:textColor="@color/icons"
-        app:kswTextOn= "Entrada"
-        app:kswTextOff= "Salida "
-        app:kswThumbMargin="@dimen/ksw_md_thumb_shadow_inset_top"
-        app:kswThumbHeight="50dp"
-        app:kswThumbWidth="50dp"
+        android:textColor="@color/icons2"
         android:textSize="35dp"
-        app:kswThumbColor="@color/icons"
-        style="@style/AppTheme"
         app:kswAnimationDuration="300"
         app:kswBackColor="@color/primary"
+        app:kswTextOff="Salida "
+        app:kswTextOn="Entrada"
+        app:kswThumbColor="@color/icons2"
+        app:kswThumbHeight="50dp"
+        app:kswThumbMargin="@dimen/ksw_md_thumb_shadow_inset_top"
+        app:kswThumbWidth="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCaseta"
-        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtCaseta" />
 
     <TextView
         android:id="@+id/txtNoEmpleado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="No. Empleado"
+        android:layout_marginTop="15dp"
+        android:text="No. Tarjeta"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sbTipoChecada"
-        tools:layout_editor_absoluteX="245dp" />
+        app:layout_constraintTop_toBottomOf="@+id/sbTipoChecada" />
 
     <EditText
         android:id="@+id/edtNoEmpleado"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="-1dp"
         android:background="@drawable/borde"
         android:ems="10"
         android:gravity="center_horizontal"
@@ -80,7 +83,34 @@
         android:singleLine="true"
         android:textColor="@android:color/black"
         android:textSize="22sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNoEmpleado" />
+
+    <EditText
+        android:id="@+id/edtNoTarjeta"
+        android:layout_width="200dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="-1dp"
+        android:background="@drawable/borde"
+        android:editable="false"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="text"
+        android:maxLength="5"
+        android:singleLine="true"
+        android:textColor="@android:color/black"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNoEmpleado" />
 
@@ -96,8 +126,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteX="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        android:layout_marginTop="80dp" />
 
     <ImageView
         android:id="@+id/imgFondoAcceso"
@@ -184,11 +214,36 @@
         android:layout_marginTop="8dp"
         android:background="@color/primary"
         android:text="Buscar"
-        android:textColor="@color/icons"
+        android:textColor="@color/icons2"
         android:textSize="23sp"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNoEmpleado" />
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="233dp"
+        android:orientation="horizontal" />
+
+    <ToggleButton
+        android:id="@+id/tbnTipoLectura"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@color/accent"
+        android:checked="true"
+        android:textColor="@color/ksw_md_solid_disable"
+        android:textOff="No. Empleado"
+        android:textOn="No. Tarjeta"
+        app:layout_constraintBottom_toTopOf="@+id/imgFondoGuardia"
+        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
