--- a/app/src/main/res/layout/item_checada.xml
+++ b/app/src/main/res/layout/item_checada.xml
@@ -53,31 +53,31 @@
 
     <Button
         android:id="@+id/btnCancelarAlerta"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/primary_light"
         android:text="Cancelar"
         android:textColor="@android:color/white"
         android:textSize="18dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgPerfilAlerta"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgPerfilAlerta" />
 
     <Button
         android:id="@+id/btnAceptarAlerta"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/primary_light"
         android:text="Aceptar"
         android:textColor="@android:color/white"
         android:textSize="18dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgPerfilAlerta"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgPerfilAlerta" />
 </android.support.constraint.ConstraintLayout>
