--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="accent">#C6361B</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
+    <color name="icons">#000000</color>
+    <color name="icons2">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
 </resources>
