--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,21 +34,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin" />
 
-    <ImageView
-        android:id="@+id/imvRFIDLogin"
-        android:layout_width="286dp"
-        android:layout_height="220dp"
-        app:srcCompat="@drawable/im_rfid"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtMensajeLogin"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.504" />
-
     <Button
         android:id="@+id/btnOlvideTarjetaLogin"
         android:layout_width="180dp"
@@ -57,7 +42,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="18dp"
         android:background="@color/primary_light"
         android:foreground="?android:attr/selectableItemBackground"
         android:text="@string/olvid_mi_tarjeta"
@@ -65,6 +49,22 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imvRFIDLogin" />
+        android:layout_marginTop="173dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtTarjeta" />
+
+    <EditText
+        android:id="@+id/edtTarjeta"
+        android:layout_width="200dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="95dp"
+        android:background="@drawable/borde"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtMensajeLogin" />
 
 </android.support.constraint.ConstraintLayout>
