--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -81,6 +81,7 @@
         android:inputType="number"
         android:maxLength="5"
         android:singleLine="true"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="22sp"
         android:visibility="gone"
@@ -105,6 +106,7 @@
         android:inputType="text"
         android:maxLength="5"
         android:singleLine="true"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
